err/piletools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/piletools'...
Listing './lib/python3.5/site-packages/piletools-0.21.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wiggelen'...
Compiling './lib/python3.5/site-packages/wiggelen/commands.py'...
***   File "./lib/python3.5/site-packages/wiggelen/commands.py", line 93
    scale = lambda (r, p, v): (r, p, v * factor)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wiggelen/plot.py'...
***   File "./lib/python3.5/site-packages/wiggelen/plot.py", line 75
    for region, w in itertools.groupby(walker, lambda (r, p, v): r):
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wiggelen-0.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
